Re attempt to fix vertical alignment

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -3360,16 +3360,17 @@ article {
     background-color: rgba($secondary8, 0.3);
     border: 1px solid rgba($secondary8, 0.8);
     @include flex(1);
+    position: relative;
     .noIndicators {
+        position: absolute;
+        top: 45%;
         text-align: center;
         display: inline-block;
         width: 100%;
-        height: 100%;
         color: rgba($primary4, 0.5);
         text-shadow: 1px 1px 0 rgba(white, 1);
         align-items: center;
         span:first-child { 
-            margin-top: 45%;
             display: block;
             font-size: 150%;
         }
